# HHPlayer

./: README.md
Native/decoder/inc/: QueueArray.h
Player/: build.gradle  gradle.properties
Player/app/: build.gradle
Player/app/src/main/: AndroidManifest.xml
Player/gradle/wrapper/: gradle-wrapper.properties
native/app/src/: build.sh
native/app/src/jni/: .IMediaCodec.h.swp  Android.mk  Application.mk  Native.cpp  cscope.in.out  cscope.out  cscope.po.out  mediacodec.h  mediacodec_ndk.cpp
native/decoder/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
native/decoder/demo/: main.cpp
native/decoder/inc/: DecoderBase.h  IDecoder.h  SoftwareDecoder.h
native/decoder/src/: DecoderBase.cpp  SoftwareDecoder.cpp
native/demuxer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cscope.in.out  cscope.out  cscope.po.out
native/demuxer/demo/: main.cpp
native/demuxer/inc/: cscope.in.out  cscope.out  cscope.po.out
native/demuxer/src/: FFmpegDemuxer.cpp  FFmpegDemuxer.h
native/ffmpeg/ffmpeg-3.4.2/: build_neon.sh  build_x86.sh  config.h
native/ffmpeg/ffmpeg-3.4.2/doc/: config.texi  fate.txt  ffprobe-all.pod  ffprobe.pod  ffserver-all.pod  ffserver.pod  print_options
native/ffmpeg/ffmpeg-3.4.2/ffbuild/: config.fate  config.mak  config.sh
native/ffmpeg/ffmpeg-3.4.2/fftools/: cmdutils.d  ffprobe.d  ffserver.d  ffserver_config.d
native/ffmpeg/ffmpeg-3.4.2/libavcodec/: alsdec.d  audiotoolboxenc.d  binkaudio.d  bitpacked.d  bsf.d  cllc.d  cngdec.d  dca.d  dca_core.d  dca_exss.d  dca_lbr.d  dca_parser.d  dca_xll.d  dcaadpcm.d  dcadata.d  dcadec.d  dcaenc.d  decode.d  dolby_e.d  dvenc.d  encode.d  exr.d  fits.d  fitsdec.d  fitsenc.d  frame_thread_encoder.d  gdv.d  h264_cabac.d  hevc_cabac.d  hevc_filter.d  hevc_mvs.d  hevc_parse.d  hevc_parser.d  hevc_refs.d  hevc_sei.d  hevcdec.d  hevcdsp.d  hevcpred.d  hqx.d  lcldec.d  (+25 more)
native/ffmpeg/ffmpeg-3.4.2/libavformat/: aacdec.d  aiffdec.d  aiffenc.d  avidec.d  cafdec.d  cafenc.d  dash.d  dashenc.d  dtsdec.d  dtshddec.d  fitsdec.d  fitsenc.d  g726.d  gdv.d  hlsenc.d  http.d  img2dec.d  isom.d  matroskaenc.d  mov.d  movenc.d  mpegts.d  mxfenc.d  nutdec.d  rtpdec_qt.d  rtpdec_rfc4175.d  s337m.d  smoothstreamingenc.d  spdifenc.d  supenc.d
native/utils/: BlockQueue.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  blockQueue.h  cmake_install.cmake  cscope.in.out  cscope.out  cscope.po.out
native/utils/demo/: main.cpp  main2.cpp  utilsDemo
native/utils/inc/: .queue.h.swp  BlockQueue.h  doubleQueue.h  list.h  queue.h
native/utils/src/: .blockQueue.cpp.swp  QueueArray.cpp  blockQueue.cpp  blockQueue.h  doubleQueue.cpp  list.cpp  queue.cpp
(+15 files in other folders)
