cmake_minimum_required(VERSION 2.8)
PROJECT(decoder)

SET(LIBRARY_OUTPUT_PATH lib)
SET(CMAKE_CPP_COMPILES g++)

SET(CMAKE_BUILD_TYPE DEBUG)

SET(LIBRARY_OUTPUT_PATH    ${PROJECT_SOURCE_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/demo)

SET(SRC_LIST  src/SoftwareDecoder.cpp
    src/DecoderBase.cpp)

INCLUDE_DIRECTORIES(inc)

ADD_LIBRARY(decoder STATIC ${SRC_LIST})

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

ADD_EXECUTABLE(main demo/main.cpp)
TARGET_LINK_LIBRARIES(main decoder)
